--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar" role="navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="https://ibighit.com/bts/eng/">
-                <img src="/img/logo.svg" alt="cabecera" width="112" height="28" />
+                <img src="img/logo.svg" alt="cabecera" width="112" height="28" />
                 <h2>BTS</h2>
             </a>
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
@@ -35,7 +35,7 @@
     </nav>
     <section>
         <figure class="image is-640x360">
-            <img src="/img/cabecera.jpg">
+            <img src="img/cabecera.jpg">
           </figure>
     </section>
     <section class="tile is-parent">
@@ -50,13 +50,13 @@
             </div>
         </div>
         <div class="tile is-parent is-6 is-justify-content-center">
-            <img src="/img/foto1.avif" alt="Foto grupal" width="300" height="300" />
+            <img src="img/foto1.avif" alt="Foto grupal" width="300" height="300" />
         </div>
     </section>
     <section class="hero is-link py-4">
         <div class="columns is-vcentered is-justify-content-space-evenly-has-background-dark m-0 p-5">
         <div class = "column is-one-third">
-            <img src="/img/foto2.webp" alt="Foto grupal" width="300" height="300" />
+            <img src="img/foto2.webp" alt="Foto grupal" width="300" height="300" />
         </div>
         <div class="tile is-child is-5">
             <h1 class="title">Generos Musicales</h1>
@@ -83,12 +83,12 @@
             </div>
         </div>
         <div class="tile is-parent is-6 is-justify-content-center">
-            <img src="/img/jin.webp" alt="FKim seokjin" width="400" height="400" />
+            <img src="img/jin.webp" alt="FKim seokjin" width="400" height="400" />
         </div>
     </div>
     <div class="columns is-vcentered is-justify-content-space-evenly has-background-light m-0 p-5">
         <div class="tile is-parent is-6 is-justify-content-center">
-            <img src="/img/yoongi.png" alt="Min Yoongi" width="400" height="400" />
+            <img src="img/yoongi.png" alt="Min Yoongi" width="400" height="400" />
         </div>
         <div class="column is-one-third">
             <p class="title is-2 is-spaced has-text-dark">Min Yoongi</p>
@@ -110,12 +110,12 @@
             </div>
         </div>
         <div class="tile is-parent is-6 is-justify-content-center">
-            <img src="/img/hobi.jpg" alt="Jung Ho-Seok" width="400" height="400" />
+            <img src="img/hobi.jpg" alt="Jung Ho-Seok" width="400" height="400" />
         </div>
     </div>
     <div class="columns is-vcentered is-justify-content-space-evenly has-background-light m-0 p-5">
         <div class="tile is-parent is-6 is-justify-content-center">
-            <img src="/img/nam.avif" alt="Kim Nam-joon" width="400" height="400" />
+            <img src="img/nam.avif" alt="Kim Nam-joon" width="400" height="400" />
         </div>
         <div class="column is-one-third">
             <p class="title is-2 is-spaced has-text-dark">Kim Nam-joon</p>
@@ -136,12 +136,12 @@
             </div>
         </div>
         <div class="tile is-parent is-6 is-justify-content-center">
-            <img src="/img/jimin.avif" alt="Park Ji-Min" width="400" height="400" />
+            <img src="img/jimin.avif" alt="Park Ji-Min" width="400" height="400" />
         </div>
     </div>
     <div class="columns is-vcentered is-justify-content-space-evenly has-background-light m-0 p-5">
         <div class="tile is-parent is-6 is-justify-content-center">
-            <img src="/img/tae.jpg" alt="Kim Tae-Hyung" width="400" height="400" />
+            <img src="img/tae.jpg" alt="Kim Tae-Hyung" width="400" height="400" />
         </div>
         <div class="column is-one-third">
             <p class="title is-2 is-spaced has-text-dark">Kim Tae-Hyung</p>
@@ -162,7 +162,7 @@
             </div>
         </div>
         <div class="tile is-parent is-6 is-justify-content-center">
-            <img src="/img/jungkook.webp" alt="Jeon Jungkook" width="400" height="400" />
+            <img src="img/jungkook.webp" alt="Jeon Jungkook" width="400" height="400" />
         </div>
     </div>
     <footer class="footer">
