--- a/albums.html
+++ b/albums.html
@@ -13,7 +13,7 @@
     <nav class="navbar" role="navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="https://ibighit.com/bts/eng/">
-                <img src="/img/logo.svg" alt="cabecera" width="112" height="28" />
+                <img src="img/logo.svg" alt="cabecera" width="112" height="28" />
                 <h2>BTS</h2>
             </a>
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
@@ -35,7 +35,7 @@
     </nav>
     <section>
         <figure class="image isis-640x360">
-            <img src="/img/cabecera2.jpg" >
+            <img src="img/cabecera2.jpg" >
           </figure>
     </section>
     <section class="tile is-parent is-vertical">
@@ -48,7 +48,7 @@
                 <div class="column is-one-third is-one-quarter-desktop">
                     <div class="card">
                         <div class="card-image">
-                            <img class="image is-fullwidth" src="/img/abum1.webp" width="300"  height="220"/>
+                            <img class="image is-fullwidth" src="img/abum1.webp" width="300"  height="220"/>
                         </div>
                         <div class="card-content">
                             <p class="title is-5">2 COOL 4 SKOOL</p>
@@ -59,7 +59,7 @@
                 <div class="column is-one-third is-one-quarter-desktop">
                     <div class="card">
                         <div class="card-image">
-                            <img class="image is-fullwidth" src="/img/album2.jpg" width="300"  height="220"/>
+                            <img class="image is-fullwidth" src="img/album2.jpg" width="300"  height="220"/>
                         </div>
                         <div class="card-content">
                             <p class="title is-5">O!RUL8,2?</p>
@@ -70,7 +70,7 @@
                 <div class="column is-one-third is-one-quarter-desktop">
                     <div class="card">
                         <div class="card-image">
-                            <img class="image is-fullwidth" src="/img/album3.jpg" width="300"  height="220"/>
+                            <img class="image is-fullwidth" src="img/album3.jpg" width="300"  height="220"/>
                         </div>
                         <div class="card-content">
                             <p class="title is-5">Skool Luv Affair</p>
@@ -81,7 +81,7 @@
                 <div class="column is-one-third is-one-quarter-desktop">
                     <div class="card">
                         <div class="card-image">
-                            <img class="image is-fullwidth" src="/img/album4.jpg" width="300"  height="220"/>
+                            <img class="image is-fullwidth" src="img/album4.jpg" width="300"  height="220"/>
                         </div>
                         <div class="card-content">
                             <p class="title is-5">Dark & Wild</p>
@@ -93,7 +93,7 @@
                 <div class="column is-one-third is-one-quarter-desktop">
                     <div class="card">
                         <div class="card-image">
-                            <img class="image is-fullwidth" src="/img/album6.webp" width="300"  height="220"/>
+                            <img class="image is-fullwidth" src="img/album6.webp" width="300"  height="220"/>
                         </div>
                         <div class="card-content">
                             <p class="title is-5">The Most Beautiful Moment in Life</p>
@@ -105,7 +105,7 @@
                 <div class="column is-one-third is-one-quarter-desktop">
                     <div class="card">
                         <div class="card-image">
-                            <img class="image is-fullwidth" src="/img/album5.jpg" width="300"  height="220"/>
+                            <img class="image is-fullwidth" src="img/album5.jpg" width="300"  height="220"/>
                         </div>
                         <div class="card-content">
                             <p class="title is-5">The Most Beautiful Moment in Life pt 2</p>
@@ -117,7 +117,7 @@
                 <div class="column is-one-third is-one-quarter-desktop">
                     <div class="card">
                         <div class="card-image">
-                            <img class="image is-fullwidth" src="/img/album7.jpg" width="300"  height="220"/>
+                            <img class="image is-fullwidth" src="img/album7.jpg" width="300"  height="220"/>
                         </div>
                         <div class="card-content">
                             <p class="title is-5">Wings</p>
@@ -129,7 +129,7 @@
                 <div class="column is-one-third is-one-quarter-desktop">
                     <div class="card">
                         <div class="card-image">
-                            <img class="image is-fullwidth" src="/img/album10.jpg" width="300"  height="220"/>
+                            <img class="image is-fullwidth" src="img/album10.jpg" width="300"  height="220"/>
                         </div>
                         <div class="card-content">
                             <p class="title is-5">Love Yourself: Tear</p>
@@ -141,7 +141,7 @@
                 <div class="column is-one-third is-one-quarter-desktop">
                     <div class="card">
                         <div class="card-image">
-                            <img class="image is-fullwidth" src="/img/album11.webp" width="300"  height="220"/>
+                            <img class="image is-fullwidth" src="img/album11.webp" width="300"  height="220"/>
                         </div>
                         <div class="card-content">
                             <p class="title is-5">Face Yourself</p>
